kubernetes/schmapps/monitoring/loki/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: loki
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-ingressgateway
      namespace: ingress
  hostnames: ["loki.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: loki
          port: 8080
          weight: 1
